feat: add statistically significant experiments

--- a/Migration_forecasting_experiments.ipynb
+++ b/Migration_forecasting_experiments.ipynb
@@ -389,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [12:36<00:00,  7.56s/it]\n"
+      "100%|██████████| 100/100 [00:52<00:00,  1.92it/s]\n"
      ]
     }
    ],
@@ -405,11 +405,11 @@
     "from sklearn.svm import SVC, SVR\n",
     "\n",
     "\n",
-    "# reg_model = XGBRegressor(n_estimators=100, max_depth=3)\n",
-    "# clf_model = XGBClassifier(n_estimators=100, max_depth=3)\n",
+    "reg_model = XGBRegressor(n_estimators=100, max_depth=3)\n",
+    "clf_model = XGBClassifier(n_estimators=100, max_depth=3)\n",
     "\n",
-    "reg_model = RandomForestRegressor(n_estimators=100)\n",
-    "clf_model = RandomForestClassifier(n_estimators=100)\n",
+    "# reg_model = RandomForestRegressor(n_estimators=100)\n",
+    "# clf_model = RandomForestClassifier(n_estimators=100)\n",
     "\n",
     "# reg_model = LinearRegression()\n",
     "# clf_model = XGBClassifier(n_estimators=100)\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -459,41 +459,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Real small cities</th>\n",
-       "      <td>308.033 +- 95.174</td>\n",
-       "      <td>308.033 +- 18.654</td>\n",
-       "      <td>2.893 +- 1.694</td>\n",
+       "      <td>357.391 +- 94.164</td>\n",
+       "      <td>357.391 +- 18.456</td>\n",
+       "      <td>3.995 +- 2.208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Synth regression</th>\n",
-       "      <td>103.501 +- 4.765</td>\n",
-       "      <td>103.501 +- 0.934</td>\n",
-       "      <td>0.355 +- 0.048</td>\n",
+       "      <td>127.001 +- 6.262</td>\n",
+       "      <td>127.001 +- 1.227</td>\n",
+       "      <td>0.455 +- 0.048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Real big cities</th>\n",
-       "      <td>580.851 +- 53.664</td>\n",
-       "      <td>580.851 +- 10.518</td>\n",
-       "      <td>7.502 +- 1.094</td>\n",
+       "      <td>905.997 +- 159.642</td>\n",
+       "      <td>905.997 +- 31.289</td>\n",
+       "      <td>20.114 +- 9.086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Synth reg + synth clf</th>\n",
-       "      <td>103.637 +- 5.368</td>\n",
-       "      <td>103.637 +- 1.052</td>\n",
-       "      <td>0.366 +- 0.049</td>\n",
+       "      <td>124.062 +- 7.303</td>\n",
+       "      <td>124.062 +- 1.431</td>\n",
+       "      <td>0.457 +- 0.065</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         Mean MAE +- STD        CI MAE, 95% Mean MSE +- STD\n",
-       "Real small cities      308.033 +- 95.174  308.033 +- 18.654  2.893 +- 1.694\n",
-       "Synth regression        103.501 +- 4.765   103.501 +- 0.934  0.355 +- 0.048\n",
-       "Real big cities        580.851 +- 53.664  580.851 +- 10.518  7.502 +- 1.094\n",
-       "Synth reg + synth clf   103.637 +- 5.368   103.637 +- 1.052  0.366 +- 0.049"
+       "                          Mean MAE +- STD        CI MAE, 95%  Mean MSE +- STD\n",
+       "Real small cities       357.391 +- 94.164  357.391 +- 18.456   3.995 +- 2.208\n",
+       "Synth regression         127.001 +- 6.262   127.001 +- 1.227   0.455 +- 0.048\n",
+       "Real big cities        905.997 +- 159.642  905.997 +- 31.289  20.114 +- 9.086\n",
+       "Synth reg + synth clf    124.062 +- 7.303   124.062 +- 1.431   0.457 +- 0.065"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
